--- a/maestro_gateway/config.json
+++ b/maestro_gateway/config.json
@@ -1,12 +1,12 @@
 {
   "name": "Maestro Gateway",
-  "version": "2.7",
+  "version": "1.0",
   "slug": "maestro_gateway",
-  "description": "MQTT Gateway to MCZ Maestro stoves' api",
-  "url": "https://github.com/SebLz/ha-addons/tree/main/maestro_gateway",
+  "description": "MQTT Gateway voor MCZ Pellet kachels",
+  "url": "https://github.com/QLVR-IT/ha-addons/tree/main/maestro_gateway",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "init": false,
-  "image": "ghcr.io/seblz/{arch}-addon-maestro_gateway",
+  "image": "ghcr.io/qlvr-it/{arch}-addon-maestro_gateway",
   "options": {
     "USE_MCZ_CLOUD": true,
     "MQTT_ip": "core-mosquitto",
