--- a/maestro_gateway/config.json
+++ b/maestro_gateway/config.json
@@ -1,7 +1,7 @@
 {
-  "name": "Maestro Gateway",
-  "version": "1.1",
-  "slug": "maestro_gateway",
+  "name": "QLVR - Maestro Gateway",
+  "version": "1.2",
+  "slug": "qlvr_maestro_gateway",
   "description": "MQTT Gateway voor MCZ Pellet kachels",
   "url": "https://github.com/QLVR-IT/ha-addons/tree/main/maestro_gateway",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
