--- a/zabbix-agent2/config.json
+++ b/zabbix-agent2/config.json
@@ -21,6 +21,7 @@
     "ports": {
       "10050/tcp": 10050
     },
+    "image": "QLVR-IT/ha-addons-{arch}-zabbix-agent2",
     "options": {
       "server": "zabbix-server.local",
       "serveractive": "zabbix-server.local",
