--- a/zabbix-agent2/config.json
+++ b/zabbix-agent2/config.json
@@ -1,6 +1,6 @@
 {
     "name": "Zabbix Agent 2",
-    "version": "1.0",
+    "version": "1.0.1",
     "slug": "zabbix-agent2",
     "description": "Zabbix Agent 2",
     "url": "https://github.com/QLVR-IT/ha-addons/tree/main/zabbix-agent2",
@@ -24,13 +24,15 @@
     "options": {
       "server": "zabbix-server.local",
       "serveractive": "zabbix-server.local",
-      "hostname": "Home Assistant"
+      "hostname": "Home Assistant",
+      "debug_level": 3
     },
     "schema": {
       "server": "str",
       "serveractive": "str",
       "hostname": "str",
       "tlspskidentity": "str?",
-      "tlspsksecret": "str?"
+      "tlspsksecret": "str?",
+      "debug_level": "int?"
     }
   }
