--- a/zabbix-agent2/Dockerfile
+++ b/zabbix-agent2/Dockerfile
@@ -14,9 +14,7 @@ ENV LANG C.UTF-8
 RUN apk add --no-cache jq zabbix-agent2 && \
     addgroup -g 1003 docker && \
     addgroup zabbix docker && \
-    mkdir -p /etc/zabbix/zabbix_agent2.d/plugins.d && \
-    mkdir -p /var/log/zabbix && \
-    chown -R zabbix:zabbix /var/log/zabbix
+    mkdir -p /etc/zabbix/zabbix_agent2.d/plugins.d
 
 # Copy zabbix-agent2 plugins
 COPY --from=builder ["/usr/sbin/zabbix-agent2-plugin", "/usr/sbin/zabbix-agent2-plugin"]
