--- a/zabbix-agent2/config.json
+++ b/zabbix-agent2/config.json
@@ -1,6 +1,6 @@
 {
     "name": "Zabbix Agent 2",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "slug": "zabbix-agent2",
     "description": "Zabbix Agent 2",
     "url": "https://github.com/QLVR-IT/ha-addons/tree/main/zabbix-agent2",
@@ -10,7 +10,7 @@
         "aarch64",
         "amd64",
         "i386"
-      ],
+    ],
     "startup": "system",
     "boot": "auto",
     "full_access": true,
@@ -19,27 +19,26 @@
     "host_network": true,
     "docker_api": true,
     "map": [
-      {
-        "type": "addon_config",
-        "read_only": false,
-        "path": "/addon_config"
-      }
+        {
+            "type": "addon_config",
+            "read_only": false
+        }
     ],
     "ports": {
-      "10050/tcp": 10050
+        "10050/tcp": 10050
     },
     "options": {
-      "server": "zabbix-server.local",
-      "serveractive": "zabbix-server.local",
-      "hostname": "Home Assistant",
-      "debug_level": 3
+        "server": "zabbix-server.local",
+        "serveractive": "zabbix-server.local",
+        "hostname": "Home Assistant",
+        "debug_level": 3
     },
     "schema": {
-      "server": "str",
-      "serveractive": "str",
-      "hostname": "str",
-      "tlspskidentity": "str?",
-      "tlspsksecret": "str?",
-      "debug_level": "int?"
+        "server": "str",
+        "serveractive": "str",
+        "hostname": "str",
+        "tlspskidentity": "str?",
+        "tlspsksecret": "str?",
+        "debug_level": "int?"
     }
-  }
+}
