--- a/zabbix-agent2/Dockerfile
+++ b/zabbix-agent2/Dockerfile
@@ -1,16 +1,20 @@
 ARG BUILD_FROM
 ARG BUILD_VERSION
+
 FROM $BUILD_FROM
 
 LABEL io.hass.type="addon"
 LABEL io.hass.arch="${BUILD_ARCH}"
 LABEL io.hass.version="${BUILD_VERSION}"
 
-# Vereiste tools
+# Tools
 RUN apk add --no-cache jq tzdata
 
-# Copy run-script
-COPY run.sh /run.sh
-RUN chmod +x /run.sh
+# Copy run-script en s6-service
+COPY run.sh /usr/bin/run.sh
+COPY rootfs/etc/services.d/zabbix-agent2/run /etc/services.d/zabbix-agent2/run
 
-CMD [ "/run.sh" ]
+RUN chmod +x /usr/bin/run.sh \
+    && chmod +x /etc/services.d/zabbix-agent2/run
+
+# géén CMD of ENTRYPOINT meer – s6 zorgt voor init en services
