--- a/zabbix-agent2/Dockerfile
+++ b/zabbix-agent2/Dockerfile
@@ -3,12 +3,12 @@ ARG BUILD_VERSION
 
 FROM $BUILD_FROM
 
-LABEL io.hass.type="addon"
-LABEL io.hass.arch="${BUILD_ARCH}"
-LABEL io.hass.version="${BUILD_VERSION}"
+LABEL io.hass.type="addon" \
+      io.hass.arch="${BUILD_ARCH}" \
+      io.hass.version="${BUILD_VERSION}"
 
-# Tools
-RUN apk add --no-cache jq tzdata s6-overlay
+# Alleen de tools die we écht nodig hebben
+RUN apk add --no-cache jq tzdata
 
 # Copy run-script en s6-service
 COPY run.sh /usr/bin/run.sh
@@ -17,4 +17,5 @@ COPY rootfs/etc/services.d/zabbix-agent2/run /etc/services.d/zabbix-agent2/run
 RUN chmod +x /usr/bin/run.sh \
     && chmod +x /etc/services.d/zabbix-agent2/run
 
-# géén CMD of ENTRYPOINT meer – s6 zorgt voor init en services
+ENTRYPOINT ["/init"]
+CMD []
