--- a/zabbix-agent2/Dockerfile
+++ b/zabbix-agent2/Dockerfile
@@ -7,15 +7,16 @@ LABEL io.hass.type="addon" \
       io.hass.arch="${BUILD_ARCH}" \
       io.hass.version="${BUILD_VERSION}"
 
-# Alleen de tools die we écht nodig hebben
-RUN apk add --no-cache jq tzdata
+# Alleen wat we écht nodig hebben
+RUN apk add --no-cache jq tzdata su-exec
 
-# Copy run-script en s6-service
+# Kopieer je scripts
 COPY run.sh /usr/bin/run.sh
 COPY rootfs/etc/services.d/zabbix-agent2/run /etc/services.d/zabbix-agent2/run
 
 RUN chmod +x /usr/bin/run.sh \
     && chmod +x /etc/services.d/zabbix-agent2/run
 
+# Forceer de originele s6-overlay init
 ENTRYPOINT ["/init"]
 CMD []
