--- a/zabbix-agent2/config.json
+++ b/zabbix-agent2/config.json
@@ -1,7 +1,7 @@
 {
     "init": false,
     "name": "Zabbix Agent 2",
-    "version": "1.2.6",
+    "version": "1.2.7",
     "slug": "zabbix-agent2",
     "description": "Zabbix Agent 2",
     "url": "https://github.com/QLVR-IT/ha-addons/tree/main/zabbix-agent2",
@@ -14,7 +14,7 @@
     ],
     "startup": "system",
     "boot": "auto",
-    "full_access": true,
+    "full_access": false,
     "host_ipc": true,
     "host_pid": true,
     "host_network": true,
