--- a/obsolete-za2/config.json
+++ b/obsolete-za2/config.json
@@ -1,10 +1,10 @@
 {
     "init": false,
-    "name": "Zabbix Agent 2",
-    "version": "1.2.12",
-    "slug": "zabbix-agent2",
-    "description": "Zabbix Agent 2",
-    "url": "https://github.com/QLVR-IT/ha-addons/tree/main/zabbix-agent2",
+    "name": "Obsolete ZA2",
+    "version": "1.2.13",
+    "slug": "obsolete-za2",
+    "description": "Obsolete ZA2",
+    "url": "https://github.com/QLVR-IT/ha-addons/tree/main/obsolete-za2",
     "arch": [
         "armhf",
         "armv7",
