Ensure run.sh is executable

--- a/zabbix-agent2/Dockerfile
+++ b/zabbix-agent2/Dockerfile
@@ -1,6 +1,6 @@
-FROM zabbix/zabbix-agent2
+FROM zabbix/zabbix-agent2:alpine-7.2-latest
 
 COPY run.sh /run.sh
-RUN chmod +x /run.sh
+RUN ls -l /run.sh && chmod +x /run.sh
 
 CMD ["/run.sh"]
