--- a/zabbix-agent2/Dockerfile
+++ b/zabbix-agent2/Dockerfile
@@ -1,6 +1,10 @@
 FROM zabbix/zabbix-agent2:alpine-7.2-latest
 
-COPY run.sh /run.sh
-RUN ls -l /run.sh && chmod +x /run.sh
+LABEL io.hass.type="addon" \
+      io.hass.arch="${BUILD_ARCH}" \
+      io.hass.version="${BUILD_VERSION}"
 
-CMD ["/run.sh"]
+COPY run.sh /run.sh
+RUN chmod +x /run.sh
+
+CMD [ "/run.sh" ]
