--- a/zabbix-agent2/Dockerfile
+++ b/zabbix-agent2/Dockerfile
@@ -1,10 +1,10 @@
-FROM zabbix/zabbix-agent2:alpine-7.2-latest
+ARG BUILD_FROM
+FROM $BUILD_FROM
 
-LABEL io.hass.type="addon" \
-      io.hass.arch="${BUILD_ARCH}" \
-      io.hass.version="${BUILD_VERSION}"
+RUN apk add --no-cache \
+    zabbix-agent2
 
-COPY run.sh /run.sh
-RUN chmod +x /run.sh
+COPY run.sh /
+RUN chmod a+x /run.sh
 
 CMD [ "/run.sh" ]
