--- a/zabbix-agent2/config.yaml
+++ b/zabbix-agent2/config.yaml
@@ -1,5 +1,5 @@
 init: false
-version: 2.1.0
+version: 2.1.1
 name: Zabbix Agent2
 slug: zabbix_agent2
 description: Zabbix Agent2 Addon for Home Assistant
@@ -8,6 +8,7 @@ advanced: true
 arch:
   - aarch64
   - amd64
+  - armv7
 host_network: true
 host_ipc: true
 host_pid: true
