--- a/zabbix-agent2/Dockerfile
+++ b/zabbix-agent2/Dockerfile
@@ -1,9 +1,11 @@
+# Global arg for HA/Supervisor or local build
+ARG BUILD_FROM=ghcr.io/hassio-addons/base:18.1.1
+
 # Stage offical Zabbix Agent2 (7.2.x) on Alpine
 FROM zabbix/zabbix-agent2:alpine-7.2-latest AS zbx
 
-# Home Assistant Community Add-on: Base Image
-ARG BUILD_FROM
-FROM $BUILD_FROM
+# Home Assistant Community Add-on: Base Image (via BUILD_FROM)
+FROM ${BUILD_FROM}
 
 # Base tools/certs and paths
 RUN apk add --no-cache ca-certificates bash \
